--- a/style.css
+++ b/style.css
@@ -83,3 +83,14 @@ body .header {
   background-repeat: no-repeat;
   height: 60vh;
 }
+
+@media only screen and (max-width: 600px) {
+  #testimonials {
+    background: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)),
+                url(img/testimonials-bg.jpg);
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
+    height: 70vh;
+  }
+}
