--- a/style.css
+++ b/style.css
@@ -12,6 +12,7 @@ body .header {
   background-size: cover;
   background-repeat: no-repeat;
   height: 100vh;
+  background-attachment: fixed;
   position: relative;
   top: 0;
   left: 0;
@@ -25,6 +26,7 @@ body .header {
     background-size: cover;
     background-repeat: no-repeat;
     height: 175vh;
+    background-attachment: fixed;
     position: relative;
     top: 0;
     left: 0;
@@ -50,6 +52,17 @@ body .header {
 }
 
 
+/* services section */
+#services .after::after {
+  content: '';
+  height: 1px;
+  width: 100px;
+  background-color: goldenrod;
+  display: inline-block;
+  margin-bottom: 5px;
+  margin-left: 5px;
+}
+
 
 /* call to action section */
 .call_to_action {
@@ -59,6 +72,7 @@ body .header {
   background-size: cover;
   background-repeat: no-repeat;
   height: 50vh;
+  background-attachment: fixed;
 }
 
 @media only screen and (max-width: 600px) {
@@ -69,7 +83,20 @@ body .header {
     background-size: cover;
     background-repeat: no-repeat;
     height: 60vh;
+    background-attachment: fixed;
   }
+}
+
+
+/* portfolio section */
+#portfolio .after::after {
+  content: '';
+  height: 1px;
+  width: 100px;
+  background-color: goldenrod;
+  display: inline-block;
+  margin-bottom: 5px;
+  margin-left: 5px;
 }
 
 
@@ -82,6 +109,7 @@ body .header {
   background-size: cover;
   background-repeat: no-repeat;
   height: 60vh;
+  background-attachment: fixed;
 }
 
 @media only screen and (max-width: 600px) {
@@ -92,5 +120,32 @@ body .header {
     background-size: cover;
     background-repeat: no-repeat;
     height: 70vh;
+    background-attachment: fixed;
   }
+}
+
+
+
+/* team section */
+#team .after::after {
+  content: '';
+  height: 1px;
+  width: 100px;
+  background-color: goldenrod;
+  display: inline-block;
+  margin-bottom: 5px;
+  margin-left: 5px;
+}
+
+
+
+/* contact section */
+#contact .after::after {
+  content: '';
+  height: 1px;
+  width: 100px;
+  background-color: goldenrod;
+  display: inline-block;
+  margin-bottom: 5px;
+  margin-left: 5px;
 }
